--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,7 @@ version: "2.4"
 services:
   postgres:
     image: postgres:14-alpine
+    ports:
+      - 5432:5432
     env_file:
       - postgres.env
