--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2.4"
 
 services:
   postgres:
+    container_name: ecom-postgres
     image: postgres:14-alpine
     ports:
       - 5432:5432
