--- a/postgres.env.template
+++ b/postgres.env.template
@@ -1,4 +1,9 @@
+# Docker related
 POSTGRES_PASSWORD=
 POSTGRES_USER=postgres
 POSTGRES_DB=postgres
 PGDATA=/var/lib/postgresql/data
+
+# App related
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
