--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 DEBUG=
 DISCORD_WEBHOOK_GUNDAMHOBBY_DIFF=
 DISCORD_WEBHOOK_GUNDAMHOBBY_FULL=
+DISCORD_WEBHOOK_NIIGS_DIFF=
+DISCORD_WEBHOOK_NIIGS_FULL=
