--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,5 @@ DISCORD_WEBHOOK_GUNDAMHOBBY_DIFF=
 DISCORD_WEBHOOK_GUNDAMHOBBY_FULL=
 DISCORD_WEBHOOK_NIIGS_DIFF=
 DISCORD_WEBHOOK_NIIGS_FULL=
+DISCORD_WEBHOOK_METROHOBBIES_DIFF=
+DISCORD_WEBHOOK_METROHOBBIES_FULL=
