--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,5 @@ DISCORD_WEBHOOK_NIIGS_DIFF=
 DISCORD_WEBHOOK_NIIGS_FULL=
 DISCORD_WEBHOOK_METROHOBBIES_DIFF=
 DISCORD_WEBHOOK_METROHOBBIES_FULL=
+DISCORD_WEBHOOK_SCIFIANIME_FULL=
+DISCORD_WEBHOOK_SCIFIANIME_DIFF=
