--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "JohnnyLin-a",
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.11"
+  "scripts": {
+    "build": "tsc --outDir ./dist index.ts"
   },
-  "devDependencies": {
-    "@types/node": "^17.0.39",
-    "typescript": "^4.7.3"
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.11",
+    "typescript": "^4.7.3",
+    "@types/node": "^17.0.39"
   }
 }
