--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.39",
+    "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
     "pg": "^8.7.3",
     "typescript": "^4.7.3"
