--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: "2.4"
 
 services:
   postgres:
-    container_name: ecom-postgres
     image: postgres:14-alpine
     ports:
-      - 5432:5432
+      - 55432:5432
     env_file:
       - postgres.env
+    volume:
+      - ./pgdata:/var/lib/postgresql/data
     restart: unless-stopped
