--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.39",
+    "@types/pg": "^8.6.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
