--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "dev": "ts-node index.ts"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.11",
-    "pg": "^8.7.3"
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.1.4",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.39",
-    "@types/pg": "^8.6.5",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "@types/node": "^18.16.17",
+    "@types/pg": "^8.10.2",
+    "eslint": "^8.42.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
